# mmdeploy

./: .clang-format  .codespell_ignore.txt  .gitignore  .gitmodules  .isort.cfg  .pre-commit-config.yaml  CITATION.cff  CMakeLists.txt  Jenkinsfile  MANIFEST.in  README.md  README_zh-CN.md  build_linux_nvidia.sh  build_mmdeploy.sh  codecov.yml  constraints.txt  convert.py  deploy.py  infer.py  mmcls.md  mmdet.md  mmseg.md  modules_statistic_results.json  nohup.out  onnxruntime-linux-x64-1.6.0.tgz  qqq.sh  requirements.txt  run_docker.sh  setup.cfg  setup.py  shields.json  test.py
backend_ops/: CMakeLists.txt
backend_ops/ncnn/: CMakeLists.txt
backend_ops/ncnn/onnx2ncnn/: CMakeLists.txt  onnx2ncnn.cpp
backend_ops/ncnn/ops/: CMakeLists.txt  ncnn_ops_definer.h  ncnn_ops_register.cpp  ncnn_ops_register.h
backend_ops/ncnn/pyncnn_ext/: CMakeLists.txt  ncnn_ext.cpp
backend_ops/onnxruntime/: CMakeLists.txt  onnxruntime_register.cpp
backend_ops/onnxruntime/common/: onnxruntime_register.h  ort_utils.cpp  ort_utils.h
backend_ops/onnxruntime/grid_sample/: gridSample.cpp  grid_sample.cpp  grid_sample.h
backend_ops/onnxruntime/modulated_deform_conv/: modulated_deform_conv.cpp  modulated_deform_conv.h
backend_ops/onnxruntime/roi_align/: roi_align.cpp  roi_align.h
backend_ops/tensorrt/: CMakeLists.txt  trt_plugin.cpp
backend_ops/tensorrt/batched_nms/: allClassNMS.cu  batchedNMSInference.cpp  cub_helper.h  gatherNMSOutputs.cu  kernel.cu  kernel.h  permuteData.cu  sortScoresPerClass.cu  sortScoresPerImage.cu  trt_batched_nms.cpp  trt_batched_nms.hpp  trt_batched_nms_kernel.cpp  trt_batched_nms_kernel.hpp
backend_ops/tensorrt/bicubic_interpolate/: trt_bicubic_interpolate.cpp  trt_bicubic_interpolate.hpp  trt_bicubic_interpolate_kernel.cu  trt_bicubic_interpolate_kernel.hpp
backend_ops/tensorrt/common/: common_cuda_helper.hpp  trt_plugin_base.hpp  trt_plugin_helper.hpp  trt_serialize.hpp
backend_ops/tensorrt/common_impl/: CMakeLists.txt  trt_cuda_helper.cu
backend_ops/tensorrt/grid_sampler/: trt_grid_sampler.cpp  trt_grid_sampler.hpp  trt_grid_sampler_kernel.cu  trt_grid_sampler_kernel.hpp
backend_ops/tensorrt/instance_norm/: trt_instance_norm.cpp  trt_instance_norm.hpp
backend_ops/tensorrt/modulated_deform_conv/: trt_modulated_deform_conv.cpp  trt_modulated_deform_conv.hpp  trt_modulated_deform_conv_kernel.cu  trt_modulated_deform_conv_kernel.hpp
backend_ops/tensorrt/multi_level_roi_align/: trt_multi_level_roi_align.cpp  trt_multi_level_roi_align.hpp  trt_multi_level_roi_align_kernel.cu  trt_multi_level_roi_align_kernel.hpp
backend_ops/tensorrt/nms/: nms_cuda_kernel.cuh  trt_nms.cpp  trt_nms.hpp  trt_nms_kernel.cu  trt_nms_kernel.cuh  trt_nms_kernel.hpp
backend_ops/tensorrt/roi_align/: CMakeLists.txt  roi_align_cuda_kernel.cuh  trt_roi_align.cpp  trt_roi_align.hpp  trt_roi_align_kernel.cu  trt_roi_align_kernel.hpp
backend_ops/tensorrt/scatternd/: trt_scatternd.cpp  trt_scatternd.hpp  trt_scatternd_kernel.cu  trt_scatternd_kernel.hpp
csrc/apis/c/: CMakeLists.txt  async_detector.h  classifier.cpp  classifier.h  common.cpp  common.h  common_internal.h  detector.cpp  detector.h  executor.cpp  executor.h  executor_internal.h  handle.h  model.cpp  model.h  pipeline.cpp  pipeline.h  pose_detector.cpp  pose_detector.h  restorer.cpp  restorer.h  rotated_detector.cpp  rotated_detector.h  rotation_detector.cpp  rotation_detector.h  segmentor.cpp  segmentor.h  static_detector.h  text_detector.cpp  text_detector.h  text_recognizer.cpp  text_recognizer.h
csrc/apis/java/: CMakeList.txt  CMakeLists.txt  classifier.cpp  detector.cpp  pose_detector.cpp  restorer.cpp  rotated_detector.cpp  segmentor.cpp  text_detector.cpp  text_recognizer.cpp
csrc/apis/python/: CMakeLists.txt  classifier.cpp  common.cpp  common.h  detector.cpp  executor.cpp  pose_detector.cpp  pydetector.cpp  restorer.cpp  rotated_detector.cpp  rotation_detector.cpp  segmentor.cpp  text_recognizer.cpp
csrc/archive/: CMakeLists.txt  json_archive.h  value_archive.h
csrc/backend_ops/ncnn/: CMakeLists.txt
csrc/backend_ops/torchscript/: bind.cpp  (+1 more)
csrc/codebase/: CMakeLists.txt  common.h
csrc/core/: CMakeLists.txt  archive.h  device.h  device_impl.cpp  device_impl.h  graph.cpp  graph.h  logger.cpp  logger.h  macro.h  mat.cpp  mat.h  model.cpp  model.h  model_impl.h  module.cpp  module.h  net.cpp  net.h  operator.cpp  operator.h  profiler.cpp  profiler.h  registry.cpp  registry.h  serialization.h  status_code.cpp  status_code.h  tensor.cpp  tensor.h  value.h
csrc/execution/: CMakeLists.txt  bulk.h  closure.h  concepts.h  dynamic_batch.h  ensure_started.h  execute.h  execution.cpp  execution.h  expand.h  just.h  let_value.h  on.h  run_loop.h  schedule_from.h  split.h  start_detached.h  submit.h  sync_wait.h  tag_invoke.h  then.h  transfer.h  transfer_just.h  type_erased.h  type_traits.h  utility.h  when_all.h  when_all_value.h
csrc/graph/: CMakeLists.txt  common.cpp  common.h  flatten.cpp  flatten.h  inference.cpp  inference.h  pipeline.cpp  pipeline.h  task.cpp  task.h  unflatten.cpp  unflatten.h
csrc/mmdeploy/: CMakeLists.txt
csrc/model/: CMakeLists.txt  directory_model_impl.cpp  zip_model_impl.cpp
csrc/net/: CMakeLists.txt  net_module.cpp  net_module.h
csrc/preprocess/: CMakeLists.txt  transform_module.cpp  transform_module.h
demo/c/: CMakeLists.txt  batch_object_detection.cpp  image_classification.cpp  video_recognition.cpp
demo/cpp/: CMakeLists.txt  README.md
demo/csrc/: CMakeLists.txt  async_ocr.cpp  async_ocr_v2.cpp  det_cls.cpp  det_pose.cpp  detector.cpp  image_classification.cpp  image_restorer.cpp  image_segmentation.cpp  object_detection.cpp  ocr.cpp  oriented_object_detection.cpp  pipeline.cpp  pose_detection.cpp  pose_detector.cxx  pose_estimation.cpp  pose_tracker.cpp  restorer.cxx  rotated_detector.cxx  rotated_object_detection.cpp  text_det_recog.cpp  text_det_recog.cxx  text_ocr.cxx
service/riscv/: CMakeLists.txt  backend.cpp  backend.h  inference.proto  inference_server.cpp  server_impl.cpp  server_impl.h
tests/test_csrc/: CMakeLists.txt  test_main.cpp  test_resource.h
(+3670 files in other folders)
